--- a/zip_data_cleaning.Rmd
+++ b/zip_data_cleaning.Rmd
@@ -9,9 +9,6 @@ library(tidyverse)
 library(readxl)
 library(janitor)
 library(lubridate)
-library(tidycensus)
-options(tigris_use_cache = TRUE)
-census_api_key("c627b3c962b5b06cdbb714e3ebe65dda42d70a47")
 
 
 ```
@@ -106,7 +103,12 @@ acs_with_banking
 
 
 ```{r}
-ppp_total <- rbind(ppp_150, all_states2)
+
+ppp_150_newcol <- ppp_150 %>%
+  mutate(loan_amount = NA) %>%
+  mutate(loan_amount = as.character(loan_amount))
+
+ppp_total <- rbind(ppp_150_newcol, all_states2)
 
 
 ppp_with_demographics <- left_join(ppp_total, acs_with_banking, 
@@ -156,38 +158,30 @@ sba_cleaning <- function(file) {
 
 
 ```{r}
-alabama <- sba_cleaning("raw_data/sba/Alabama_150.csv")
-alaska <- sba_cleaning("raw_data/sba/Alaska_150.csv")
-americansamoa <- sba_cleaning("raw_data/sba/AmericanSamoa_150.csv")
-arizona <- sba_cleaning("raw_data/sba/arizona_150.csv")
-arkansas <- sba_cleaning("raw_data/sba/arkansas_150.csv")
-california <- sba_cleaning("raw_data/sba/california_150.csv")
-colorado <- sba_cleaning("raw_data/sba/colorado_150.csv")
-connecticut <- sba_cleaning("raw_data/sba/colorado_150.csv")
-dc <- sba_cleaning()
+# run for Mac
+file.names1 <- dir(path = "/Users/Regular/Desktop/GOV50/pppdata/raw_data/sba/states/", pattern = ".csv")
+
+# run for Windows
+file.names2 <- dir(path = "C:/Justin/Gov50/pppdata/raw_data/sba/states/", pattern = ".csv")
 ```
 
 
 ```{r}
-file.names <- dir(path = "/Users/Regular/Desktop/GOV50/pppdata/raw_data/sba/states/", pattern = ".csv")
-
 all_states<- tibble()
 
-for(i in 1:length(file.names)) {
-  file <- sba_cleaning(paste("raw_data/sba/states/",file.names[i], sep = ""))
+for(i in 1:length(file.names2)) {
+  file <- sba_cleaning(paste("raw_data/sba/states/",file.names2[i], sep = ""))
   all_states <- rbind(all_states, file)
 }
 
-all_states2 <- all_states %>%
-  rename("loan_range" = "loan_amount") %>%
-  mutate(loan_range = as.character(loan_range))
 ```
 
 
 ```{r}
-file.names <- dir(path = "/Users/Regular/Desktop/GOV50/pppdata/raw_data/sba/states/", pattern = ".csv")
+all_states2 <- all_states %>%
+  mutate(loan_range = "less than 150k")
 
-file.names[1]
+all_states2
 ```
 
 
