--- a/county_crosswalk.Rmd
+++ b/county_crosswalk.Rmd
@@ -1,18 +1,13 @@
 ---
-title: "county_data_cleaning"
+title: "County Crosswalk"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-library(janitor)
 library(tidyverse)
-library(ggmap)
-library(censusxy)
-
-# key = AIzaSyBW9l2RZD8jtt8jNvLmE6Hm5AL6PQHwC6U
-
-# 662498 rows in the original ppp_150 dataset after filtering out no addresses
+library(janitor)
+library(readxl)
 ```
 
 ## R Markdown
@@ -21,26 +16,8 @@ This is an R Markdown document. Markdown is a simple formatting syntax for autho
 
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
-```{r geocoding cleaning}
-ppp_150 <- read_csv("raw_data/sba/PPP_SBA_150.csv") %>%
-  clean_names() %>%
-  select(address, city, state, zip) %>%
-  filter(address != "N/A")
-
-ppp_150_1 <- ppp_150 %>%
-  slice(1:5)
-
-ppp_geocoded <- cxy_geocode(ppp_150_1, street = 'address', city = 'city', state = 'state', zip = 'zip')
-
-ppp_geocoded
-```
-
-
-```{r geocoding 2}
-ppp_geocoded_2 <- ppp_150 %>%
-  rowwise() %>%
-  cxy_geocode(street = 'address', city = 'city', state = 'state', zip = 'zip')
-
+```{r cars}
+read.delim(file = 'raw_data/crosswalks/natl_zccd_delim.txt')
 ```
 
 ## Including Plots
