--- a/bank_loan_dummies.Rmd
+++ b/bank_loan_dummies.Rmd
@@ -8,7 +8,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(janitor)
 library(tidyverse)
 
-loan_data <- readRDS("ppp_acs_pvi_covid_1017.rds")
+loan_data <- readRDS("ppp_covidadj_1018.rds")
 old_data <- readRDS("ppp_loanonly_all_loans.rds")
 ```
 
@@ -62,11 +62,11 @@ left_join(banks, bank_deposits, by = c("lender" = "name")) %>%
 
 ```{r}
 test_regression <-
-  lm(ppp_allvars_1018$days_to_approval ~ 1 + ppp_allvars_1018$estimate_median_income_dollars_families_families +
-       ppp_allvars_1018$percent_estimate_race_total_population_one_race_black_or_african_american +
-       ppp_allvars_1018$percent_estimate_race_total_population_one_race_white + ppp_allvars_1018$high_school_pct +
+  lm(ppp_allvars_1018$days_to_approval ~ 1 + ppp_allvars_1018$median_family_income +
+       ppp_allvars_1018$black_percent +
+       ppp_allvars_1018$White_percent + ppp_allvars_1018$high_school_pct +
        ppp_allvars_1018$banks_per_pop + ppp_allvars_1018$loan_350_1mil + ppp_allvars_1018$loan_150_350 + 
        ppp_allvars_1018$loan_5mil_10mil +ppp_allvars_1018$loan_2mil_5mil + ppp_allvars_1018$loan_1mil_2mil +
-       ppp_allvars_1018$pct + ppp_allvars_1018$mean_start_cases_weighted + 
+       ppp_allvars_1018$cook_pvi + ppp_allvars_1018$mean_start_cases_weighted + 
        ppp_allvars_1018$mean_start_deaths_weighted + ppp_allvars_1018$number_ppp)
 ```
